k8s/postgres-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: world-news
spec:
  replicas: 1
  selector: { matchLabels: { app: postgres } }
  template:
    metadata: { labels: { app: postgres } }
    spec:
      containers:
      - name: postgres
        image: postgres:18
        ports: [{ containerPort: 5432 }]
        volumeMounts: [{ name: pgdata, mountPath: /var/lib/postgresql/data }]
      volumes:
      - name: pgdata
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: world-news
spec:
  ports: [{ port: 5432, targetPort: 5432 }]
  selector: { app: postgres }
  clusterIP: None
